# eos-plot-widget

./: Dockerfile  README.md  docker-compose.yml  dockerfile  eos-widget.ipynb  pyproject.toml
src/acwf_eos_widget/: select.py  upload.py  utils.py  widget.py
src/acwf_eos_widget/reference-data/: WiFlCP_avg_oxides_lda.json  WiFlCP_avg_oxides_pbe.json  WiFlCP_avg_oxides_pbesol.json  WiFlCP_avg_unaries_lda.json  WiFlCP_avg_unaries_pbe.json  WiFlCP_avg_unaries_pbesol.json
