[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "acwf-eos-widget"
version = "0.1.0"
description = "A widget to plot periodic tables representing comparison metrics of EOS."
readme = "README.md"
authors = [
    { name = "Timo Reents", email = "timo.reents@psi.ch" }
]

dependencies = [
    "matplotlib",
    "numpy>=1.21",
]

[tool.flit.module]
name = 'acwf_eos_widget'