[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "acwf-eos-widget"
version = "0.1.0"
description = "A widget to plot periodic tables representing comparison metrics of EOS."
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Timo Reents", email = "timo.reents@psi.ch" }
]

dependencies = [
    "matplotlib",
    "numpy~=1.26.4",
    "ipywidgets~=8.1",
    "ipykernel~=6.29",
    "pandas<3.0",
    "ipython~=8.29"
]

[tool.flit.module]
name = 'acwf_eos_widget'